<resources>
    <string name="app_name">SwiperSample</string>
    <string name="ad">AD</string>
    <string name="more_detail">更多詳情</string>
    <string name="revenue">Revenue</string>
    <string name="social_rewards">Social Rewards</string>
    <string name="interaction_rewards">Interaction Rewards</string>
    <string name="expiry_date">%1$d 天後到期</string>
    <string name="active_code">活動代碼</string>
    <string name="cooperative_e_commerce">合作電商</string>
    <string name="huazhong_mall">滑眾商城</string>
    <string name="page_title">page %1$d</string>
    <string name="rongcoin_record">容幣記錄</string>
    <string name="voucher">兌換券</string>

</resources>