<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_record_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                tools:text="容幣"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15.5sp"
                app:layout_constraintStart_toEndOf="@id/iv_record_icon"
                app:layout_constraintTop_toTopOf="@id/iv_record_icon"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                tools:text="XNC (無限錢包)"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/iv_record_icon"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_coin_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="15dp"
                tools:text="9102619"
                app:layout_constraintTop_toTopOf="@id/iv_record_icon"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_coin_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                tools:text=".123"
                android:textColor="@color/gray_A5A0A0"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_coin_money"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_expire_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                tools:text="328 天後到期"
                android:textColor="@color/gray"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_record_icon"
                />
            
            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/pb_date_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:max="100"
                android:progress="20"
                android:indeterminate="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_expire_date"
                app:layout_constraintTop_toTopOf="@id/tv_expire_date"
                app:layout_constraintBottom_toBottomOf="@id/tv_expire_date"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/detail_bg"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pb_date_progress"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_ir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="12.5sp"
                    android:textColor="@color/black"
                    android:text="@string/interaction_rewards"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_ir_decimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="12.5sp"
                    android:textColor="@color/gray_A5A0A0"
                    tools:text=".849"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_ir"
                    app:layout_constraintBottom_toBottomOf="@id/tv_ir"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_ir_int"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="12.5sp"
                    android:textColor="@color/black"
                    tools:text="+1"
                    app:layout_constraintEnd_toStartOf="@id/tv_ir_decimal"
                    app:layout_constraintTop_toTopOf="@id/tv_ir"
                    app:layout_constraintBottom_toBottomOf="@id/tv_ir"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_sr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="8dp"
                    android:textSize="12.5sp"
                    android:textColor="@color/black"
                    android:text="@string/social_rewards"
                    app:layout_constraintTop_toBottomOf="@id/tv_ir"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_sr_decimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="12.5sp"
                    android:textColor="@color/gray_A5A0A0"
                    tools:text=".213"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_sr"
                    app:layout_constraintBottom_toBottomOf="@id/tv_sr"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_sr_int"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="12.5sp"
                    android:textColor="@color/black"
                    tools:text="+681"
                    app:layout_constraintEnd_toStartOf="@id/tv_sr_decimal"
                    app:layout_constraintTop_toTopOf="@id/tv_sr"
                    app:layout_constraintBottom_toBottomOf="@id/tv_sr"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_revenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="8dp"
                    android:textSize="12.5sp"
                    android:textColor="@color/black"
                    android:text="@string/revenue"
                    app:layout_constraintTop_toBottomOf="@id/tv_sr"
                    app:layout_constraintStart_toStartOf="parent"
                    />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_revenue_decimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textSize="12.5sp"
                    android:textColor="@color/gray_A5A0A0"
                    tools:text=".729"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tv_revenue"
                    app:layout_constraintBottom_toBottomOf="@id/tv_revenue"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_revenue_int"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="12.5sp"
                    android:textColor="@color/black"
                    tools:text="+1,793"
                    app:layout_constraintEnd_toStartOf="@id/tv_revenue_decimal"
                    app:layout_constraintTop_toTopOf="@id/tv_revenue"
                    app:layout_constraintBottom_toBottomOf="@id/tv_revenue"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_more_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_detail"
                android:textColor="@color/blue_2FC1CF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/layout_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_more_detail"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintTop_toBottomOf="@id/cv_head"
        />
</androidx.constraintlayout.widget.ConstraintLayout>